--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,7 @@ Description: This is a thin wrapper around the 'MOEX' 'ISS' REST interface.
     It allows to quickly fetch price candles for a particular security, obtain 
     its profile information and so on.
 License: GPL-3
+Language: en-GB
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
