--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,14 +10,21 @@ export(search_security)
 import(assertthat)
 import(cli)
 import(dplyr)
+import(ggplot2)
 import(stringr)
 importFrom(glue,glue)
+importFrom(lubridate,as_date)
 importFrom(purrr,compact)
 importFrom(purrr,imap)
 importFrom(purrr,imap_chr)
 importFrom(purrr,map)
 importFrom(purrr,map_dfr)
 importFrom(purrr,transpose)
+importFrom(readr,parse_character)
+importFrom(readr,parse_date)
+importFrom(readr,parse_datetime)
+importFrom(readr,parse_double)
+importFrom(readr,parse_time)
 importFrom(rlang,abort)
 importFrom(rlang,inform)
 importFrom(tibble,add_column)
